Changelog for plone.reload
==========================

    (name of developer listed in brackets)

0.4 Unreleased
--------------

    - Integrated xreload.py from RefreshNG and added a first working version
      of a general manual code reload feature.
      [hannosch]

0.3 Released February 21, 2008
------------------------------

    - Fixed caching issues by invalidating all ZODB caches. If you have local
      site managers spread across multiple FileStorages this might still not
      work as expected.
      [hannosch]

    - Added cleanup for CMFCore and PAS.
      [hannosch]

0.2 Released January 25, 2008
-----------------------------

    - Added compatibility with Zope 2.10 / Plone 3.0.
      [hannosch]

0.1 Released January 25, 2008
-----------------------------

    - Initial implementation based heavily on Products.RefreshNG.
      [hannosch]

    - Initial package structure.
      [zopeskel]
