@@ -7,8 +7,22 @@ from Products.Five.browser import BrowserView
 from Products.Five import zcml
 
 from plone.reload.code import reload_code
+from plone.reload.interfaces import ICodeReload
 from plone.reload.interfaces import IZCMLReload
 from plone.reload import PATCHES
+
+
+class CodeReload(BrowserView):
+    """Reload all changed code.
+    """
+    implements(ICodeReload)
+
+    def reload(self):
+        reloaded = reload_code()
+
+        result = 'Code reloaded:\n\n'
+        result += '\n'.join(reloaded)
+        return result
 
 
 class ZCMLReload(BrowserView):
@@ -17,8 +31,6 @@ class ZCMLReload(BrowserView):
     implements(IZCMLReload)
 
     def reload(self):
-        reload_code()
-
         setSite(None)
         gsm = getGlobalSiteManager()
         gsm.__init__(gsm.__name__)
@@ -33,6 +45,7 @@ class ZCMLReload(BrowserView):
         zcml._context._seen_files.clear()
         zcml.load_site()
 
-        # Minimize all caches
+        # TODO Minimize all caches, we only really want to invalidate the
+        # local site manager from all caches
         aq_base(self.context)._p_jar.db().cacheMinimize()
         return 'Global ZCML reloaded.'
